--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -18,9 +18,20 @@ jobs:
         with:
           go-version: ${{ matrix.go }}
 
+      - name: setup MySQL
+        uses: shogo82148/actions-setup-mysql@v1
+        with:
+          mysql-version: "8.0"
+          root-password: verysecret
+
       - name: Run tests
         run: |
           go test -v -coverprofile=profile.cov ./...
+        env:
+          MYSQLPOOL_USER: root
+          MYSQLPOOL_PASS: verysecret
+          MYSQLPOOL_HOST: 127.0.0.1
+          MYSQLPOOL_PORT: 3306
 
       - name: Send coverage to codecov.io
         uses: codecov/codecov-action@v4
